tests/fixtures/compile_errors/invalid_struct_field.fe
struct Bar:
  id: u256

contract Foo:
  val: Bar

  pub def foo():
    self.val.foo